# neural-net-visual-test-cpp

./: .gitignore  CMakeLists.txt  README.md  app.h  main.cpp  neural.h  timer.h
